--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=shopWeb
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/decorationsDB?createDatabaseIfNotExist=true
+
+spring.datasource.username=root
+
+spring.datasource.password=root
+
+spring.jpa.open-in-view=false
