feat: jwt configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.open-in-view=false
+
+# ambient variable for secret jwt
+api.security.token.secret=${JWT_SECRET:my-secret-key}
